<resources>
    <string name="app_name">Lsn03App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Сохранить</string>

    <string name="add">Добавить</string>
    <string name="desc">Описание</string>
    <string name="title">Название</string>
    <string name="isFavourite">Избранное</string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="createDate">Дата создания:</string>
</resources>